--- a/WindowsUIWalla/ManageWalla/WallaControlTemplates.xaml
+++ b/WindowsUIWalla/ManageWalla/WallaControlTemplates.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:walla="clr-namespace:ManageWalla"
-                    xmlns:gif="http://wpfanimatedgif.codeplex.com"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib"
                     xmlns:ShaderEffectLibrary="clr-namespace:ShaderEffectLibrary;assembly=ShaderEffectLibrary">
 
@@ -65,7 +64,7 @@
     <ControlTemplate x:Key="templateRefreshButton" TargetType="{x:Type Button}">
         <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
             <!--<Image x:Name="imageRefresh" Source="{StaticResource refreshImageSelectedSrc}" Height="29"  />-->
-            <Image x:Name="imageRefresh" gif:ImageBehavior.AnimatedSource="{StaticResource refreshImageSelectedSrc}"  Height="29" />
+            <Image x:Name="imageRefresh" Source="{StaticResource refreshImageSelectedSrc}" Height="32" />
         </Grid>
         <ControlTemplate.Triggers>
             <MultiTrigger>
@@ -78,17 +77,18 @@
                     </Condition>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter TargetName="imageRefresh" Property="gif:ImageBehavior.AnimatedSource" Value="{StaticResource refreshImageSrc}" />
+                    <Setter TargetName="imageRefresh" Property="Source" Value="{StaticResource refreshImageSrc}" />
                 </MultiTrigger.Setters>
             </MultiTrigger>
             <Trigger Property="Tag">
                 <Trigger.Value>
                     <sys:Boolean>True</sys:Boolean>
                 </Trigger.Value>
-                <Setter TargetName="imageRefresh" Property="gif:ImageBehavior.AnimatedSource" Value="{StaticResource refreshImageRotatingSrc}" />
+                <Setter TargetName="imageRefresh" Property="Source" Value="{StaticResource refreshImageSelectedSrc}" />
+                <Setter TargetName="imageRefresh" Property="Style" Value="{StaticResource Spinner}" />
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
-            <Setter TargetName="imageRefresh" Property="Height" Value="28" />
+            <Setter TargetName="imageRefresh" Property="Height" Value="32" />
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
             <Setter TargetName="imageRefresh" Property="Opacity" Value="0.7" />
